// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelItem Component renders information "title" when property is set 1`] = `
<div
  className="ChannelItem"
>
  <div>
    The Simpsons in 10 Minuten auf Pro-Sieben
  </div>
  <div>
    Information-Header
  </div>
  <div>
    Description
  </div>
</div>
`;

exports[`ChannelItem Component renders without crashing 1`] = `
<div
  className="ChannelItem"
>
  <div>
    Information-Header
  </div>
  <div>
    Description
  </div>
</div>
`;
